--- a/compose.yaml
+++ b/compose.yaml
@@ -164,6 +164,8 @@ services:
       - ".env"
     extra_hosts:
       - host.docker.internal:host-gateway
+    ports:
+      - "55000:55999-55000:55999"
 
   openc3-traefik:
     image: "${OPENC3_REGISTRY}/openc3inc/openc3-traefik:${OPENC3_TAG}"
@@ -176,10 +178,10 @@ services:
       # - "./openc3-traefik/cert.key:/etc/traefik/cert.key:z"
       # - "./openc3-traefik/cert.crt:/etc/traefik/cert.crt:z"
     ports:
-      - "127.0.0.1:2900:80"
-      - "127.0.0.1:2943:443"
-      # - "80:80"
-      # - "443:443"
+      #- "127.0.0.1:2900:80"
+      #- "127.0.0.1:2943:443"
+      - "80:80"
+      - "443:443"
     restart: "unless-stopped"
     depends_on:
       - "openc3-redis"
